@@ -28,7 +28,7 @@ call "%bin%\configure-replicadb.cmd" "%bin%"
 :: echo _RUNJAVA "%_RUNJAVA%" 
 :: echo REPLICADB_CLASSPATH "%REPLICADB_CLASSPATH%"
 
-call %_RUNJAVA% -cp %REPLICADB_CLASSPATH% -Xmx256M -Xms256M -Dfile.encoding=UTF-8 -server -XX:+UseG1GC -XX:MaxGCPauseMillis=20 -XX:InitiatingHeapOccupancyPercent=35 -XX:+ExplicitGCInvokesConcurrent -Djava.awt.headless=true -Djavax.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl org.replicadb.ReplicaDB %*
+call %_RUNJAVA% -cp %REPLICADB_CLASSPATH% -Xmx256M -Xms256M --add-opens=java.base/java.nio=ALL-UNNAMED -Dfile.encoding=UTF-8 -server -XX:+UseG1GC -XX:MaxGCPauseMillis=20 -XX:InitiatingHeapOccupancyPercent=35 -XX:+ExplicitGCInvokesConcurrent -Djava.awt.headless=true -Djavax.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl org.replicadb.ReplicaDB %*
 
 :: create exit code from java process
 set /a exitCode=%errorlevel%
